package com.learn.service.media;

public class MediaEntity {
}
