package com.learn.service.user;

public class DefaultUserService implements UserService {
}
